--- a/public/plugins/ueditor/dialogs/image/image.html
+++ b/public/plugins/ueditor/dialogs/image/image.html
@@ -14,6 +14,7 @@
 
     <!-- image dialog -->
     <link rel="stylesheet" href="image.css" type="text/css" />
+    <link rel="stylesheet" href="../../../../fonts/font-awesome/font-awesome.min.css" type="text/css" />
 </head>
 <body>
 
