--- a/public/plugins/ueditor/dialogs/table/edittable.html
+++ b/public/plugins/ueditor/dialogs/table/edittable.html
@@ -45,7 +45,7 @@
             <ul>
                 <li>
                     <span><var id="lang_color"></var></span>
-                    <input type="text" class="tone" id="J_tone" readonly='readonly' />
+                    <input type="text" class="tone" id="J_tone" />
                 </li>
             </ul>
             <div class="clear"></div>
