--- a/public/plugins/ueditor/dialogs/table/edittable.html
+++ b/public/plugins/ueditor/dialogs/table/edittable.html
@@ -2,8 +2,10 @@
 <html>
 <head>
     <title></title>
+    <script type="text/javascript" src="../../../jquery/jquery.min.js"></script>
     <script type="text/javascript" src="../internal.js"></script>
     <link rel="stylesheet" type="text/css" href="edittable.css">
+    <link rel="stylesheet" type="text/css" href="../../../minicolors/jquery.minicolors.css">
 </head>
 <body>
 <div class="wrapper">
@@ -45,7 +47,7 @@
             <ul>
                 <li>
                     <span><var id="lang_color"></var></span>
-                    <input type="text" class="tone" id="J_tone" />
+                    <input type="text" class="tone" id="J_tone"/>
                 </li>
             </ul>
             <div class="clear"></div>
@@ -59,6 +61,7 @@
         </div>
     </div>
 </div>
+<script type="text/javascript" src="../../../minicolors/jquery.minicolors.min.js"></script>
 <script type="text/javascript" src="edittable.js"></script>
 </body>
 </html>
